test/bad/variable_declaration_15.mpp
var a:int real:int;
